fix minor layout bug

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -36,7 +36,6 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
   min-height: 100%;
 }
 
